<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.swenghomeworkone.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_welcome_text"
        android:id="@+id/mainWelcomeText"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="27dp"
        android:id="@+id/mainUserName"
        android:hint="@string/main_name_hint"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:text="@string/main_go_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainGoButton"
        android:layout_gravity="center_horizontal"
        android:onClick="greetUser" />
</LinearLayout>
