<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_greeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.swenghomeworkone.GreetingActivity"
    android:orientation="horizontal">

    <TextView
        android:text="@string/greeting_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/greetingMessage"
        android:layout_gravity="center"
        android:textAlignment="center" />
</LinearLayout>
